# programming

./: .gitignore
01-17-2024/: BinaryDump.cpp  Integer_1.cpp  Integer_2.cpp  Integer_3.cpp  addition_C  .cpp
01_10_2024/: OOP_1.cpp  OOP_1_1.cpp  OOP_1_2.cpp  OOP_2.cpp  OOP_2_1.cpp  OOP_3.cpp  OOP_3_1.cpp  OOP_3_2.cpp  OOP_3_3.cpp  OOP_4.cpp  OOP_4_1.cpp
01_11_2023/: 8_1_1.cpp  8_1_2_1.cpp  8_1_2_2.cpp  CMakeLists.txt  bit_mask_user_input.cpp  hex_arithmetic_expression_problem.cpp  test.cpp
01_17_2024/: CMakeLists.txt  Integer_4.cpp  input_С  _2.cpp  main.cpp
01_24_2024/: Char_1.cpp  Char_2.cpp  Char_3.cpp  Char_4.cpp  Integer_5_1.cpp  Integer_5_2.cpp  Integer_5_3.cpp  Integer_5_4.cpp  main.cpp
01_31_2024/: 8_1_2.cpp  Char_6.cpp  Char_7.cpp  Temperature_Scale_1.cpp  Temperature_Scale_2.cpp  main.cpp
02_07_2024/: Temperature_Scale_10.cpp  Temperature_Scale_3.cpp  Temperature_Scale_4.cpp  Temperature_Scale_5.cpp  Temperature_Scale_6.cpp  Temperature_Scale_7.cpp  Temperature_Scale_8.cpp  Temperature_Scale_9.cpp  cpp_dreadful_inheritence_diamond.cpp  example.cpp
02_14_2024/: Vector_1.cpp  Vector_10.cpp  Vector_11.cpp  Vector_2.cpp  Vector_3.cpp  Vector_4.cpp  Vector_5.cpp  Vector_6.cpp  Vector_7.cpp  Vector_8.cpp  Vector_9.cpp
02_21_2024/: Inserter.cpp  Output_Iterator.cpp  Stack_1.cpp  Stack_2.cpp  Stack_3.cpp  Stream1.cpp  factorial.cpp
02_21_2024/deque/: Deque_1.cpp  Deque_2.cpp  Deque_3.cpp  Deque_4.cpp  Deque_5.cpp  Deque_6.cpp
02_28_2024/: Array_1D.cpp  Array_1D_auto_memory.cpp  Array_1D_free_memory.cpp  Array_1D_static_memory.cpp  Array_2D.cpp  Array_2D_SI.cpp  Array_3D.cpp  Array_3D_SI.cpp
04_10_2023/Algorithms_Basic/: Пролог.txt
04_10_2023/Exam_Discussion/: Вступительное испытание.txt  Дискуссия (Вопрос 25).txt  Дискуссия (Вопрос 25. Шаг 1).txt  Дискуссия (Вопрос 25. Шаг 2).txt  Дискуссия (Вопрос 25. Шаг 3).txt  Список группы.xlsx
04_10_2023/Homework/: ex2.docx  porridge_from_axe.docx  porridge_from_axe.odt
04_10_2023/Qualification_Test/: Начала компьютерной арифметики.pptx
08_11_2023/: 3_len_number_digits_swap.cpp  CMakeLists.txt  abc.cpp  algorithm_description.txt  algorithm_description_2.txt  main.cpp  n_len_number.cpp  n_len_number.txt  описание_алгоритма.txt
08_11_2023/binary_dump/Cycle Algorithms/: BinaryDump_1.cpp  BinaryDump_2.cpp
08_11_2023/binary_dump/Linear Algorithms/: BinaryDump_1.cpp  BinaryDump_2.cpp
08_11_2023/Двоичный дамп/Functions/: BinaryDump.cpp
12_06_2023/: BinaryDump.cpp  CMakeLists.txt  main.cpp  test.cpp
15_11_2023/: CMakeLists.txt  algorithm_description_2.txt  dump.cpp  n_len_number.cpp  n_len_number_uint.cpp
18_10_2023/: Questions.txt  a.out  func.cpp  home_work_2_n_mask_even_inversion.cpp  home_work_2_n_mask_odd_inversion.cpp  logic_operatora.cpp  logic_operators.cpp  n_mask.cpp  n_mask.py  n_mask_char_even.cpp  n_mask_char_even_oop.cpp  n_mask_char_odd.cpp  problem1_04.cpp  problem1_05.cpp  problem1_06.cpp  problem1_07.cpp  problem_07  А. k-я секунда суток.txt  Описание алгоритма.txt  ОписаниеАлгоритма.odt  Самостоятельная работа.txt
22_11_2023/: BinaryDump.cpp  CMakeLists.txt  HexadecimalDump.cpp  OctalDump.cpp  dump.cpp  main.cpp  problem7_08.cpp  problem7_09.cpp  problem7_10.cpp  test.cpp
25_10_2023/console_safe_input/: CMakeLists.txt  Safe_input_report.odt  abnormal_input_C_1.cpp  input_C_1.cpp  main.cpp  normal_input_C_1.cpp  normal_input_С++_1.cpp  normal_input_С++_2.cpp  normal_input_С++_3.cpp
29_11_2023/: CMakeLists.txt  Dump_1.cpp  Dump_2.cpp  Dump_3.cpp  Dump_4.cpp  Dump_6.cpp  dump_new.cpp  q&a.odt  real_dump.cpp  real_number_dump_double.cpp  real_number_dump_float.cpp
c_plus_plus/: a.out  add_delete  hello  hello.cpp  hello_name.cpp  hello_numbers.cpp  ignore_cin.cpp  print_bjorne.cpp  sum.cpp  vars.cpp
c_plus_plus/strings_vectors/: CMakeLists.txt  add_delete.cpp  arr.cpp  ex_1.cpp  index_iteration.cpp  index_iteration_2.cpp  index_iteration_2_correct.cpp  memory_reserve.cpp  memory_reserve_2.cpp  memory_resize.cpp  multidimensional_vector.cpp  password_check.cpp  soundex.cpp  strings.cpp  vector_example_1.cpp  vector_example_2.cpp  vector_index.cpp  vector_sorting.cpp
exam_12_13_2023/: CMakeLists.txt  main.cpp  r_cycle_shift.cpp
(+102 files in other folders)
